Fix minor UI layout issues + Minor improvements

--- a/frontend/global.css
+++ b/frontend/global.css
@@ -44,7 +44,7 @@ div#app {
 }
 
 .menu-item, .list-box-item {
-    @apply px-2 py-0 min-h-0;
+    @apply px-2 py-0 min-h-8;
 }
 
 .select__value {
